# lab4_rust

./: Cargo.toml  index.html  main.rs
