[package]
name = "lab4"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
tungstenite = "0.26.1"
futures-util = "0.3"
url = "2.2"
warp = "0.3"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/main.rs"
